--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="page-header">Site Name</h1>
          <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="#">Link</a>
+            <a href="https://sylvanaronson.github.io/time-of-day/" target="_blank">Time of Day</a>
             <a href="#">Link</a>
             <a href="#">Link</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
